--- a/profapp/static/css/style.less
+++ b/profapp/static/css/style.less
@@ -861,7 +861,6 @@ body {
   box-shadow: 0 2px 5px 0 rgba(255, 0, 0, 0.75), 0 2px 10px 0 rgba(255, 0, 0, 0.12);
 }
 
-
 .error-input {
   color: @color-red-hover;
 }
@@ -1497,8 +1496,6 @@ body {
 
 }
 
-
-
 .controller-portal-edit {
   .form-control {
     width: 20em;
@@ -1539,7 +1536,6 @@ body {
   z-index: 1002;
 }
 
-
 .SelectMembershipPlanController_class {
   table {
     width: 100%;
@@ -1548,7 +1544,11 @@ body {
 
     }
 
-    td,th {
+    h5 {
+      margin-bottom: 0px;
+    }
+
+    td, th {
       padding: 2px;
       border: solid gray 2px;
     }
@@ -1566,6 +1566,47 @@ body {
       margin: 10px 0px;
     }
 
+  }
+}
 
+.publication-bg-VISIBILITY {
+
+  &-OPEN {
+    background-color: #AAffAA;
+  }
+
+  &-REGISTERED {
+    background-color: #ffffaa;
+  }
+
+  &-PAYED {
+    background-color: #FFCCCC;
+  }
+
+  &-CONFIDENTIAL {
+    background-color: #AAAAAA;
+  }
+}
+
+.publication-fg-STATUS {
+
+  &-SUBMITTED {
+    color: #000;
+  }
+
+  &-UNPUBLISHED {
+    color: #550;
+  }
+
+  &-HOLDED {
+    color: #700;
+  }
+
+  &-PUBLISHED {
+    color: #050;
+  }
+
+  &-DELETED {
+    color: #555;
   }
 }
