--- a/profapp/templates/_ruslan/partials/_header_files_grid.html
+++ b/profapp/templates/_ruslan/partials/_header_files_grid.html
@@ -4,6 +4,7 @@
 {#    <script src="{{ static_address('ui-grid/csv.js') }}"></script>#}
 {#    <script src="{{ static_address('ui-grid/pdfmake.js') }}"></script>#}
     <script src="{{ static_address('ui-grid/vfs_fonts.js') }}"></script>
+    <script src="{{ static_address('js/pr-grid-angular.js') }}"></script>
     <script>
            pr_angular_modules.push('ui.grid' , 'ui.grid.pagination' , 'ui.grid.edit', 'ui.grid.selection', 'ui.grid.grouping', 'ui.grid.treeView' );
      </script>
